--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <div class="flex flex-col items-center justify-center">
                                 <br><br>
                                 <p class="text-3xl capitalize mt-2">${dailyDescription}</p>
-                                <p class="text-xl mt-2">High ${dailyMaxTemp}°C 🥶🌧️- Low ${dailyMinTemp}°C</p>
+                                <p class="text-xl mt-2">High ${dailyMaxTemp}°C - Low ${dailyMinTemp}°C 🥶</p>
                                 <p class="text-xl">${diffText}</p>
                                 <br>
                                 <p class="text-xl mt-2">🌧️ ${maxRainProbability}% chance of rain within 2 hrs </p>
